# carmy-saturation

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: CompressorStage.cpp  CompressorStage.h  SaturationStage.cpp  SaturationStage.h  TiltFilter.cpp  TiltFilter.h
Source/UI/: KnobComponent.cpp  KnobComponent.h
docs/: BUILD.md  kanban.md
scripts/: build-linux.sh  build-macos.sh  test_dsp.py
test/: compile_check.cpp  run_dsp_tests.cpp
